# json_hyperscan

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/json_hyperscan/: json_hyperscan.py
tests/: test_edge_cases.py  test_hyperscan.py  test_rfccompliance.py
