[project]
name = "json-hyperscan"
version = "0.1.0"
description = "Library for matching large numbers of JSONPath expressions simultaniously"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
